--- a/SupervisorIfSim/SupervisorIfSim.csproj
+++ b/SupervisorIfSim/SupervisorIfSim.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Dialogs\FrmEdit.Designer.cs">
       <DependentUpon>FrmEdit.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormControls\ThreeRadioButtons.cs" />
+    <Compile Include="FormControls\ThreeRadioButtons.Designer.cs">
+      <DependentUpon>ThreeRadioButtons.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +74,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Dialogs\FrmEdit.resx">
       <DependentUpon>FrmEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormControls\ThreeRadioButtons.resx">
+      <DependentUpon>ThreeRadioButtons.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
