--- a/SupervisorIfSim/SupervisorIfSim.csproj
+++ b/SupervisorIfSim/SupervisorIfSim.csproj
@@ -54,11 +54,9 @@
     <Compile Include="Data\DropDownRow.cs" />
     <Compile Include="Data\RadioButtonItem.cs" />
     <Compile Include="Data\TextBoxItem.cs" />
-    <Compile Include="FormControls\ThreeRadioButtons.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="FormControls\ThreeRadioButtons.Designer.cs">
-      <DependentUpon>ThreeRadioButtons.cs</DependentUpon>
+    <Compile Include="Dialogs\FrmEdit.cs" />
+    <Compile Include="Dialogs\FrmEdit.Designer.cs">
+      <DependentUpon>FrmEdit.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
@@ -68,8 +66,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FormControls\ThreeRadioButtons.resx">
-      <DependentUpon>ThreeRadioButtons.cs</DependentUpon>
+    <EmbeddedResource Include="Dialogs\FrmEdit.resx">
+      <DependentUpon>FrmEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
