更新周期を追加

--- a/NpCommon/NpCommon.ini
+++ b/NpCommon/NpCommon.ini
@@ -12,6 +12,7 @@ SPCConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Ca
 Plant=RF1
 
 [DISPLAY]
+PreviewCycle=10
 ToningAppKeyword=ê∂,ÉlÉ^
 ColorNameKeyword=íÜç ,îZç 
 
