最終製品コードをINIに定義

--- a/NpCommon/NpCommon.ini
+++ b/NpCommon/NpCommon.ini
@@ -10,6 +10,7 @@ SPCConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Ca
 
 [FACILITY]
 Plant=RF1
+LastProductCode=A2
 
 [DISPLAY]
 PreviewCycle=10
