現地修正分を反映

--- a/NpCommon/NpCommon.ini
+++ b/NpCommon/NpCommon.ini
@@ -2,7 +2,7 @@
 ;NP_ORDERConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=ORDER_RF1;Data Source=NOTEPC-SATOU,1433
 ;NP_MAINConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=NP_MAIN;Data Source=NOTEPC-SATOU,1433
 ;IOSSUPConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=IOSSUP_RF1;Data Source=NOTEPC-SATOU,1433
-;SPCConnStr=Password=npABC123;Persist Security Info=True;User ID=SA;Initial Catalog=SUPERVISOR_IF;Data Source=IDCP
+;SPCConnStr=Password=npABC123;Persist Security Info=True;User ID=SA;Initial Catalog=IDCP;Data Source=DESKTOP-HELH3D8\SQLEXP2019
 NP_ORDERConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=ORDER_RF1;Data Source=PC-ASAHINA,1432
 NP_MAINConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=NP_MAIN;Data Source=PC-ASAHINA,1432
 IOSSUPConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=IOSSUP_RF1;Data Source=PC-ASAHINA,1432
